# docker-ckan-ed

./: .gitignore  .gitmodules  pyproject.toml
ckan-extensions/harvest/: ckanext  setup.py
